# dewlog

./: .gitignore  CMakeLists.txt  README.md  c_log.h  dewlog.h
scripts/: run_tests.sh
tests/: test_dewlog.c  test_main.c
